comment-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-api
spec:
  selector:
    app: comment-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
