comment-api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comment-api-ingress
spec:
  rules:
  - host: exemplo.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comment-api
            port:
              number: 80
